# pixel-forge

./: .gitignore  Cargo.toml  README.md
pixel-forge-ui/: PixelForgeUI.sln
pixel-forge-ui/PixelForgeUI/: Form1.Designer.cs  Form1.cs  PixelForgeUI.csproj  Program.cs
pixel-forge-ui/PixelForgeUI/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
src/: cli.rs  converter.rs  main.rs  utils.rs
tests/: test_pixelforge.py
