[package]
name = "pixelforge"
version = "0.1.0"
edition = "2021"
description = "PixelForge - A blazingly fast command-line image converter and processor"
license = "MIT"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/yourusername/pixelforge"
keywords = ["image", "converter", "cli", "rust", "batch"]
categories = ["command-line-utilities", "multimedia::images"]

[[bin]]
name = "pxforge"
path = "src/main.rs"

[dependencies]
image = "0.24"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
rayon = "1.8"
indicatif = "0.17"
walkdir = "2.4"

[dev-dependencies]
tempfile = "3.8"